--- a/WpfCef.csproj
+++ b/WpfCef.csproj
@@ -9,13 +9,32 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="cef.redist.x64" Version="107.1.5" />
-    <PackageReference Include="cef.redist.x86" Version="107.1.5" />
-    <PackageReference Include="cef.sdk" Version="107.1.5" />
-    <PackageReference Include="CefSharp.Common" Version="107.1.50" />
-    <PackageReference Include="CefSharp.Common.NETCore" Version="107.1.50" />
-    <PackageReference Include="CefSharp.OffScreen" Version="107.1.50" />
-    <PackageReference Include="CefSharp.Wpf" Version="107.1.50" />
+    <PackageReference Include="cef.redist.x64" Version="107.1.9" />
+    <PackageReference Include="cef.redist.x86" Version="107.1.9" />
+    <PackageReference Include="cef.sdk" Version="107.1.9" />
+    <PackageReference Include="CefSharp.Common" Version="107.1.90" />
+    <PackageReference Include="CefSharp.Common.NETCore" Version="107.1.90" />
+    <PackageReference Include="CefSharp.OffScreen" Version="107.1.90" />
+    <PackageReference Include="CefSharp.Wpf" Version="107.1.90" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2-beta3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="cars.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="chromiumembeddedframework.runtime.win-arm64" Version="107.1.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="chromiumembeddedframework.runtime.win-x64" Version="107.1.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="chromiumembeddedframework.runtime.win-x86" Version="107.1.9" />
   </ItemGroup>
 
 </Project>
